[tool.ruff]
target-version = "py39"
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=tshoot/ --cov-report=term-missing"


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "tshoot/__init__.py"

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy tshoot/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy tshoot/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "tshoot"
authors = [
  { name = "tshoot", email = "diego.sonaglia@gmail.com" }
]
description = "A simple CLI commands to try troubleshooting errors with LLMs"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "openai",
    "dynaconf",
]

[project.scripts]
tshoot = "tshoot.cli:run"

[tool.hatch.build]
include = [
  "tshoot/",
  "tests/",
]

[project.urls]
Documentation = "https://di3go-sona.github.io/tshoot/"
Source = "https://github.com/di3go-sona/tshoot"
